--- a/lab_pi_session_poller.service
+++ b/lab_pi_session_poller.service
@@ -4,10 +4,10 @@ After=network.target
 
 [Service]
 Type=simple
-User=%u
-WorkingDirectory=%h/lab-pi
-EnvironmentFile=%h/lab-pi/.env
-ExecStart=/usr/bin/python3 %h/lab-pi/lab_pi_session_poller.py
+User=abhi
+WorkingDirectory=/home/abhi/lab-pi
+EnvironmentFile=/home/abhi/lab-pi/.env
+ExecStart=/usr/bin/python3 /home/abhi/lab-pi/lab_pi_session_poller.py
 Restart=always
 RestartSec=10
 
